# routes/index.js
@@ -4,9 +4,11 @@ const express = require('express');
 const router = express.Router();
 const knex = require('../knex');
 
-// router.get('/', () => {
-//
-// });
+router.get('/users', (req, res) => {
+  console.log('hi');
+  res.sendStatus(200);
+
+});
 
 
 module.exports = router;
